<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateCreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="583dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="196dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/izena"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/deskripzioa"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <EditText
            android:id="@+id/editTextLatitud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/latitud"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <EditText
            android:id="@+id/editTextLongitud"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/longitud"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <Button
            android:id="@+id/btnGorde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/gorde" />

        <Button
            android:id="@+id/btnAtzera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F44336"
            android:text="@string/itzuli" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

